I read through the Strategies and added some comments so I understood what was happening, and so we are hopefully on the same page. There were some areas that we should discuss